@@ -3,6 +3,10 @@ Version 0.6.11
 
 - New features:
 
+  * Move download cache (for changelogs and other metadata) to
+    $XDG_CONFIG_HOME/aptitude/download.  Thanks to Josh Triplett.
+    (Closes: #671780)
+
 - Bug fixes:
 
   * Load package tags from APT if debtags database is not available.
